--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,144 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* base styles */
+*{
+  margin: 0;
+  padding:0;
+  font-family: Quicksand;
+  color:#333;
+}
+body{
+  background-image: url("../src/Image/ABrGmR.jpg");
+}
+.navbar{
+  padding: 20px;
+  display:flex;
+  align-items: center;
+  max-width: 600px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+.navbar.links{
+  margin-left: auto;
+}
+.navbar h1 {
+  color: #f1356d;
+}
+.navbar .links {
+  margin-left: auto;
+}
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover {
+  color: #f1356d;
+}
+.App{
+  margin-top: 20px;
+}
+.content {
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+} 
+button{
+  color:blue;
+  background: azure;
+  font-size: 16px;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 10%;
+  border: 1px solid blue;
+  
+}
+button:hover{
+  color: blanchedalmond;
+}
+/* blog previews / list */
+.blog-preview{
+  padding: 10px 16px;
+  margin: 20px;
+  border-bottom: 1px solid #fafafa;
+}
+.blog-preview:hover{
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1) ;
+}
+.blog-preview h2 {
+  font-size: 20px;
+  color: #efef;
+  margin-bottom: 8px;
+} 
+.blog-preview a{
+  text-decoration: none;
+}
+.blog-details h2{
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 10px;
+}
+.blog-details div{
+  margin: 20px 0px;
+}
+.blog-details button{
+  background: #f1356d;
+  color: #f2f2f2;
+  border: 0;
+  padding: 8px;
+  border-radius:8px;
+  cursor: pointer;
+}
+.blog-details p{
+  font-weight: bolder;
+  font-style: italic;
+}
+/* create new blog form */
+.create {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+.create label {
+  text-align: left;
+  display: block;
+}
+.create h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 30px;
+}
+.create input, .create textarea, .create select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+.create button {
+  background: #f1356d;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.not-found{
+  margin: 20px 0px;
+  
+}
+.not-found h2{
+  padding: 20px 0px;
+}
+.not-found p{
+  font-size: large;
+}
+.not-found a{
+  text-decoration: none;
+  color: #f2f2f2;
+}
+.not-found a:hover{
+  color: #333;
+  cursor: pointer;
 }
